Added comments to breakfast page

--- a/index.html
+++ b/index.html
@@ -9,8 +9,9 @@
     <!-- Title -->
     <title>Healthy Cooking Made Simple!</title>
 </head>
-
+<!-- Body-->
 <body>
+    <!-- Header-->
     <header>
         <!-- Page Logo -->
         <a href="index.html" id="title-logo">
@@ -29,6 +30,7 @@
             </ul>
         </nav>
     </header>
+    <!-- Main -->
     <main>
         <!-- Hero Image -->
         <section class="hero-image">
@@ -159,6 +161,7 @@
             </div>
         </div>
     </main>
+    <!-- Footer -->
     <footer>
         <!-- Social Media Links -->
         <ul id="social-media-links">
