made changes to broken image link

--- a/lunch-recipies.html
+++ b/lunch-recipies.html
@@ -131,8 +131,8 @@
 
                     <aside class="tuna-bean" id="recipe-item">
                         <h2>Tuna Bean Salad</h2>
-                        <img src="/assets/images/tuna_bean_salad_54783_16x9.jpg"
-                            alt="An image of a plate of tuna bean salad.">
+                        <img src="./assets/images/tuna_bean_salad_54783_16x9.jpg"
+                            alt="An image of a plate with a halloumi wrap on it.">
                             <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-tuna-bean">
                         <div class="recipe-content-tuna-bean">
