--- a/lunch-recipies.html
+++ b/lunch-recipies.html
@@ -132,7 +132,7 @@
                     <aside class="tuna-bean" id="recipe-item">
                         <h2>Tuna Bean Salad</h2>
                         <img src="./assets/images/tuna_bean_salad_54783_16x9.jpg"
-                            alt="An image of a plate with a halloumi wrap on it.">
+                            alt="An image of two plated with tuna bean salad on them.">
                             <figcaption>Image and recipe sourced from BBC Food.</figcaption>
                         <input type="checkbox" id="expand-checkbox-tuna-bean">
                         <div class="recipe-content-tuna-bean">
