made changes to width of recipe containers on all devices

--- a/dinner-recipies.html
+++ b/dinner-recipies.html
@@ -19,9 +19,9 @@
         <nav>
             <ul class="navigation-bar" id="navigation-bar">
                 <li><a href="index.html">Home</a></li>
-                <li><a href="breakfast-recipies.html">Breakfast Recipies</a></li>
-                <li><a href="lunch-recipies.html">Lunch Recipies</a></li>
-                <li><a href="dinner-recipies.html" class="active">Dinner Recipies</a></li>
+                <li><a href="breakfast-recipies.html">Breakfast</a></li>
+                <li><a href="lunch-recipies.html">Lunch</a></li>
+                <li><a href="dinner-recipies.html" class="active">Dinner</a></li>
             </ul>
         </nav>
     </header>
